# deribit-trading-system

./: .gitignore  .gitpod.yml  CMakeLists.txt  LICENSE  README.md  setup_linux_fixed.sh
include/api/: api.h
include/authentication/: password.h
include/latency/: tracker.h
include/utils/: utils.h
include/websocket/: websocket_client.h
scripts/: setup_linux.sh  setup_linux_fixed.sh  setup_mac.sh  setup_windows.ps1
src/: main.cpp
src/api/: api.cpp
src/authentication/: password.cpp
src/latency/: tracker.cpp
src/utils/: utils.cpp
src/websocket/: websocket_client.cpp
